--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,7 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
     <style name="input">
+        <item name="android:padding">0dp</item>
         <item name="android:layout_width">250dp</item>
         <item name="android:layout_height">35dp</item>
     </style>
